--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,11 @@ body {
  position : relative;
  top : 150px;
 }
+.nlogoimg{
+    position : relative;
+    top : 20px;
+    left : 80px;
+}
 .big{
     display : flex;
     align-items: center;
@@ -28,10 +33,9 @@ body {
 }
 .loginform{
     position : relative;
-    right : 80px;
+    right : 100px;
     width : 300px;
     height : 300px;
-    border : 1px solid black;
     display: flex; /* 수직 중앙 정렬을 위해 flex 컨테이너로 설정 */
     flex-direction: column; /* 하위 요소들을 수직으로 배치 */
     justify-content: center; /* 수직 가운데 정렬 */
@@ -45,13 +49,27 @@ body {
     height : 30px;
     font-size: 16px;
 }
-.inputbox > input{
-    margin-left : 10px;
-    width :60px;
+.form-check{
+    font-size: 14px;
+}
+.jechul{
+    width : 183px;
+    height : 45px;
+    margin-top : 10px;
+    margin-bottom : 5px;
+    position : relative;
+    left : 12px;
+    background-color: #4a596d;
+    border-radius: 7px;
+    color : #cfd7e0;
+    border-style: none;
+    font-size: 15px;
+    cursor: pointer;
 }
 .join{
     position : relative;
-    left : 600px;
+    left : 550px;
+    bottom : 20px;
 }
 
 </style>
@@ -62,7 +80,7 @@ body {
 <div class="big">
 
 
-    <img src="/images/nlogo.png" max-width="100%" height="400"/>
+    <img src="/images/nlogo.png" class="nlogoimg" max-width="100%" height="400"/>
     <div class="loginform">
         <form action="/login" method="post" onsubmit="return validateLoginForm()">
 
@@ -71,26 +89,24 @@ body {
                 <input name="password" type="password" id="password" placeholder="PASSWORD"><br/>
             </div>
 
-            <input type="submit" />
-
-            <div class="form-group">
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me"/>
-                    <label class="form-check-label" for="rememberMe">로그인 상태를 유지</label>
-                </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me"/>
+                <label class="form-check-label" for="rememberMe">로그인 상태를 유지</label>
             </div>
+
+            <input type="submit" class="jechul" value="HAMOHAMO 로그인"/>
 
         </form>
         <div class="otherlogin">
-            <div><a href="/oauth2/authorization/kakao">카카오 로그인</a></div>
-            <div><a href="/oauth2/authorization/naver">네이버 로그인</a></div>
+            <div><a href="/oauth2/authorization/kakao"><img src="/images/kakaologin.png" width=183px height=45px/></a></div>
+            <div><a href="/oauth2/authorization/naver"><img src="/images/naverlogin.png" width=183px height=45px/></a></div>
         </div>
     </div>
 
 </div>
 
 <div class="join">
-    회원이 아니시다면?&nbsp;&nbsp;<a href="/join">회원가입</a>
+    회원이 아니신가요?&nbsp;&nbsp;<a href="/join">회원가입</a>
 </div>
 
 
