--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -41,9 +41,20 @@
  }
 
  .logout{
-     align-self: center;
-     margin-right : 100px;
- }
+            align-self: center;
+            margin-right : 100px;
+        }
+
+        .logoutbtn{
+            width : 120px;
+            height : 35px;
+            background-color: #4a596d;
+            border-radius: 7px;
+            color : #cfd7e0;
+            border-style: none;
+            font-size: 15px;
+            cursor: pointer;
+        }
 
  .middle-header{
      display: flex;
