--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -45,6 +45,17 @@
             margin-right : 100px;
         }
 
+        .logoutbtn{
+            width : 120px;
+            height : 35px;
+            background-color: #4a596d;
+            border-radius: 7px;
+            color : #cfd7e0;
+            border-style: none;
+            font-size: 15px;
+            cursor: pointer;
+        }
+
         .middle-header{
             display: flex;
             height : 70px;
