아이디비번찾기 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,11 +66,18 @@ body {
     font-size: 15px;
     cursor: pointer;
 }
+
+.find{
+    position : relative;
+    left : 550px;
+    bottom : 20px;
+}
 .join{
     position : relative;
     left : 550px;
     bottom : 20px;
 }
+
 
 </style>
 
@@ -103,6 +110,12 @@ body {
         </div>
     </div>
 
+</div>
+
+<div class="find">
+    <a href="/find">아이디 찾기</a>
+    <br/>
+    <a href="/find">비밀번호 찾기</a>
 </div>
 
 <div class="join">
